--- a/index.html
+++ b/index.html
@@ -67,3 +67,39 @@
     <script src="script.js"></script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Construction Materials Shopping</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+    <header>
+        <h1>Construction Materials Store</h1>
+        <nav>
+            <select id="categoryFilter">
+                <option value="all">All Categories</option>
+                <option value="cement">Cement</option>
+                <option value="steel">Steel</option>
+                <option value="bricks">Bricks</option>
+                <option value="pipes">Pipes</option>
+                <option value="tiles">Tiles</option>
+                <option value="paint">Paint</option>
+                <option value="electrical">Electrical</option>
+            </select>
+            <a href="cart.html">🛒 Cart (<span id="cart-count">0</span>)</a>
+        </nav>
+    </header>
+
+    <main>
+        <div id="products-container">
+            <!-- Products Will be Added Here Dynamically -->
+        </div>
+    </main>
+
+    <script src="script.js"></script>
+</body>
+</html>
